k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  type: ClusterIP                     
  selector:
    app: my-app
  ports:
    - port: 80                        
      targetPort: 8080
